---------------------------------------------------------------------------------------------------
Version: 1.5.0
  Tweaks:
    - Reduced spawner kills default mod setting for evolution contribution to 300
    - Switched pause vanilla evolution factor mod setting to be enabled by default
  Bugfixes:
    - Fixed spawner faction units being counted as unit spawner kills (Thanks drayath)

---------------------------------------------------------------------------------------------------
Version: 1.4.2
  Bugfixes:
    - Fixed gui could become orphaned on upgrade
    - Fixed invalid key to next due to player leaving game, removed player index conditional

---------------------------------------------------------------------------------------------------
Version: 1.4.1
  Bugfixes:
    - Fixed 60 minute evolution change counter
    - Fixed invalid key to next due to player leaving game

---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 20. 03. 2022
  Improvements:
    - Added GUI shortcut with mod setting toggle
    - Added 5, 30, 60 minute changes in evolution to displayed stats
  Tweaks:
    - Switched license to GPLv3

---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 27. 12. 2021
  Improvements:
    - Added mod setting to control evolution calculation accuracy with an auto setting to calculate accuracy upto 80 hour game length, above 80 hrs and you may want to manually configure values.
    - Added mod setting to control evolution per worm killed
  Tweaks:
    - Added some additional information around the console command /rampantEvolution
    - Increased frequency to every 2 minutes for stats grabbed from factorio engine for computing deltas
  Bugfixes:
    - Fixed totalCounts were only set when previousCount didn't exist, which caused over time evolution to spiral as the deltas kept on growing (Thanks garrotte13)
