@@ -20,8 +20,25 @@ rampant-evolution--setMapSettingsToZero=Pause vanilla evolution factors (Permane
 rampant-evolution--minimumDevolutionPercentage=Peak evolution minimum percentage
 rampant-evolution--evolutionResolutionLevel=Reconstruction accuracy (0 is auto based on ticks)
 rampant-evolution--shortcut-bar=Show shortcut for evolution stats
+rampant-evolution--researchEvolutionCap=Enable evolution research cap
+rampant-evolution--researchEvolutionCapIncludeUpgrades=Include research upgrades in evolution cap
+rampant-evolution--technology-automation-science-multipler=Automation Science Weight
+rampant-evolution--technology-logistic-science-multipler=Logistic Science Weight
+rampant-evolution--technology-military-science-multipler=Military Science Weight
+rampant-evolution--technology-chemical-science-multipler=Chemical Science Weight
+rampant-evolution--technology-production-science-multipler=Production Science Weight
+rampant-evolution--technology-utility-science-multipler=Utility Science Weight
+rampant-evolution--technology-space-science-multipler=Space Science Weight
 
 [mod-setting-description]
+rampant-evolution--researchEvolutionCap=When enabled evolution is capped based on the amount of technology that has been researched. The highest science pack on the technology is how each technology is classified. All infinite technology is excluded. After all technology is classified, the weights for each technology are totalled and then all divided by the total number of technologies. When a technology is researched, the weighted evolution value will be added to the evolution cap.
+rampant-evolution--technology-automation-science-multipler=This weight is relative to the other weights defined. The higher this weight the more influence these technologies wll have on evolution. Check the evolution gui to see a max potential of each technology weight. An example is if this settings is 5 and the rest are 1 then each technology in this group is worth 5 times more than if this weight was also a 1.
+rampant-evolution--technology-logistic-science-multipler=This weight is relative to the other weights defined. The higher this weight the more influence these technologies wll have on evolution. Check the evolution gui to see a max potential of each technology. An example is if this settings is 5 and the rest are 1 then each technology in this group is worth 5 times more than if this weight was also a 1.
+rampant-evolution--technology-military-science-multipler=This weight is relative to the other weights defined. The higher this weight the more influence these technologies wll have on evolution. Check the evolution gui to see a max potential of each technology. An example is if this settings is 5 and the rest are 1 then each technology in this group is worth 5 times more than if this weight was also a 1.
+rampant-evolution--technology-chemical-science-multipler=This weight is relative to the other weights defined. The higher this weight the more influence these technologies wll have on evolution. Check the evolution gui to see a max potential of each technology. An example is if this settings is 5 and the rest are 1 then each technology in this group is worth 5 times more than if this weight was also a 1.
+rampant-evolution--technology-production-science-multipler=This weight is relative to the other weights defined. The higher this weight the more influence these technologies wll have on evolution. Check the evolution gui to see a max potential of each technology. An example is if this settings is 5 and the rest are 1 then each technology in this group is worth 5 times more than if this weight was also a 1.
+rampant-evolution--technology-utility-science-multipler=This weight is relative to the other weights defined. The higher this weight the more influence these technologies wll have on evolution. Check the evolution gui to see a max potential of each technology. An example is if this settings is 5 and the rest are 1 then each technology in this group is worth 5 times more than if this weight was also a 1.
+rampant-evolution--technology-space-science-multipler=This weight is relative to the other weights defined. The higher this weight the more influence these technologies wll have on evolution. Check the evolution gui to see a max potential of each technology. An example is if this settings is 5 and the rest are 1 then each technology in this group is worth 5 times more than if this weight was also a 1.
 rampant-evolution--evolutionPerWormKilled=This setting changes how evolution should be affected by worms being killed. This number should be treated the same as the vanilla pollution, spawner, and time sliders in terms of how to interpret it
 rampant-evolution-evolutionPerUnitKilled=This setting changes how evolution should be affected by biter units being killed. This number should be treated the same as the vanilla pollution, spawner, and time sliders in terms of how to interpret it
 rampant-evolution-evolutionPerHiveKilled=This setting changes how evolution should be affected by Rampant hives being killed. This number should be treated the same as the vanilla pollution, spawner, and time sliders in terms of how to interpret it
@@ -42,8 +59,9 @@ rampant-evolution--shortcut-bar=Display evolution stats gui
 
 [description]
 rampant-evolution--refreshingEvolution=RampantEvolution: Recalculating evolution, this could take several minutes to recalculate. Script times will be higher while reprocessing.
-rampant-evolution--displayEvolutionMsg=RampantEvolution:\n__1__%: Current Evolution\n   __2__%: Tile Absorbed Pollution Contribution\n   __3__%: Tree Absorbed Pollution Contribution\n   __4__%: Tree Damaged By Pollution Contribution\n   __5__%: Spawner Absorbed Pollution Contribution\n   __6__%: Killed Spawners Contribution\n   __7__%: Killed Hives Contribution\n   __8__%: Killed Units Contribution\n   __9__%: Killed Worms Contribution\n   __10__%: Pollution Generated Contribution\n   __11__%: Time Generated Contribution\n   __12__%: Minimum Evolution\n   __13__%: 5 Minute Evolution Change\n   __14__%: 30 Minute Evolution Change\n   __15__%: 60 Minute Evolution Change
+rampant-evolution--displayEvolutionMsg=RampantEvolution:\n__1__%: Current Evolution\n   __2__%: Tile Absorbed Pollution Contribution\n   __3__%: Tree Absorbed Pollution Contribution\n   __4__%: Tree Damaged By Pollution Contribution\n   __5__%: Spawner Absorbed Pollution Contribution\n   __6__%: Killed Spawners Contribution\n   __7__%: Killed Hives Contribution\n   __8__%: Killed Units Contribution\n   __9__%: Killed Worms Contribution\n   __10__%: Pollution Generated Contribution\n   __11__%: Time Generated Contribution\n   __12__%: Minimum Evolution\n   __13__%: Evolution Research Cap\n   __14__%: 5 Minute Evolution Change\n   __15__%: 30 Minute Evolution Change\n   __16__%: 60 Minute Evolution Change
 
+rampant-evolution--researchEvolutionCap=Research Cap
 rampant-evolution--evolution=Evolution
 rampant-evolution--tile=Tiles
 rampant-evolution--tree=Trees
@@ -61,6 +79,7 @@ rampant-evolution--longChange=30 Min
 rampant-evolution--longLongChange=60 Min
 
 [tooltip]
+rampant-evolution--researchEvolutionCap=Current evolution max due to research.\nAutomation research:    __1__% / __2__%\nLogistic research:            __3__% / __4__%\nMilitary research:            __5__% / __6__%\nChemical research:         __7__% / __8__%\nProduction research:      __9__% / __10__%\nUtility research:               __11__% / __12__%\nSpace research:               __13__% / __14__%
 rampant-evolution--evolution=Current evolution of the enemy force
 rampant-evolution--tile=The amount of evolution from pollution absorbed by tiles
 rampant-evolution--tree=The amount of evolution from pollution absorbed by trees
@@ -76,6 +95,7 @@ rampant-evolution--minimumEvolution=The minimum evolution that the enemy force c
 rampant-evolution--shortChange=The amount evolution changed over 5 minutes
 rampant-evolution--longChange=The amount evolution changed over 30 minutes
 rampant-evolution--longLongChange=The amount evolution changed over 60 minutes
+rampant-evolution--toggle_evolution_info=Toggle evolution gui
 
 [controls]
 rampant-evolution--toggle_evolution_info=Toggle evolution gui
